# enigmaX

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: encryption.h  options.h  status_bar.h
src/: main.c  options.c
